--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new year new me</title>
+    <link rel="stylesheet" href="styels/new.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="banner-contrainar">
+            <h2 class="banner-headding">All Thinks Are Possible If You believe</h2>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words</p>
+
+            <button class="btn-colour">Contact Us</button>
+
+
+        </div>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
